[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/general/pixel.png" type="Texture" id=1]
[ext_resource path="res://scripts/build.gd" type="Script" id=2]
[ext_resource path="res://assets/general/glow.png" type="Texture" id=3]
[ext_resource path="res://scenes/upgrade.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[sub_resource type="CircleShape2D" id=2]
radius = 45.0

[node name="build" type="Node2D"]
script = ExtResource( 2 )

[node name="build1" type="TouchScreenButton" parent="."]
position = Vector2( 162, 90 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="build1"]
modulate = Color( 0.0745098, 0.0745098, 0.0745098, 0.858824 )
scale = Vector2( 50, 50 )
texture = ExtResource( 1 )

[node name="build2" type="TouchScreenButton" parent="."]
position = Vector2( 162, 200 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="build2"]
modulate = Color( 0.0745098, 0.0745098, 0.0745098, 0.858824 )
scale = Vector2( 50, 50 )
texture = ExtResource( 1 )

[node name="build3" type="TouchScreenButton" parent="."]
position = Vector2( 162, 455 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="build3"]
modulate = Color( 0.0745098, 0.0745098, 0.0745098, 0.858824 )
scale = Vector2( 50, 50 )
texture = ExtResource( 1 )

[node name="build4" type="TouchScreenButton" parent="."]
position = Vector2( 162, 565 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="build4"]
modulate = Color( 0.0745098, 0.0745098, 0.0745098, 0.858824 )
scale = Vector2( 50, 50 )
texture = ExtResource( 1 )

[node name="build5" type="TouchScreenButton" parent="."]
position = Vector2( 763.691, 220.098 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="build5"]
modulate = Color( 0.0745098, 0.0745098, 0.0745098, 0.858824 )
scale = Vector2( 50, 50 )
texture = ExtResource( 1 )

[node name="build6" type="TouchScreenButton" parent="."]
position = Vector2( 766.208, 418.983 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="build6"]
modulate = Color( 0.0745098, 0.0745098, 0.0745098, 0.858824 )
scale = Vector2( 50, 50 )
texture = ExtResource( 1 )

[node name="player_btn" type="TouchScreenButton" parent="."]
shape = SubResource( 2 )
shape_centered = false

[node name="glow" type="Sprite" parent="."]
position = Vector2( 656.63, 238.568 )
texture = ExtResource( 3 )

[node name="upgrade" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="build1" to="." method="_on_build1_pressed"]
[connection signal="pressed" from="build2" to="." method="_on_build2_pressed"]
[connection signal="pressed" from="build3" to="." method="_on_build3_pressed"]
[connection signal="pressed" from="build4" to="." method="_on_build4_pressed"]
[connection signal="pressed" from="build5" to="." method="_on_build5_pressed"]
[connection signal="pressed" from="build6" to="." method="_on_build6_pressed"]
[connection signal="pressed" from="player_btn" to="." method="_on_player_btn_pressed"]
